--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
-    runs-on: linuxagent
+    runs-on: self-hosted
     steps:
       - name: SSH into EC2 and Deploy
         uses: appleboy/ssh-action@v1.2.2
