--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,6 +27,7 @@ jobs:
       - name: failover
         run: |
           ssh ubuntu@3.109.203.118
+          whoami
           git clone https://github.com/omkarsingad/GA-2048.git
           sudo cp -r GA-2048/* /usr/share/nginx/html/
           sudo systemctl restart nginx
