--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -28,6 +28,6 @@ jobs:
         run: |
           ssh ubuntu@3.109.203.118
           whoami
-          git clone https://github.com/omkarsingad/GA-2048.git
+          git pull https://github.com/omkarsingad/GA-2048.git
           sudo cp -r GA-2048/* /usr/share/nginx/html/
           sudo systemctl restart nginx
