--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: failover
         run: |
-          ssh ubuntu@3.109.203.118
+          ssh ubuntu@${{IPADDR}}
           whoami
           git clone https://github.com/omkarsingad/GA-2048.git
           sudo cp -r GA-2048/* /usr/share/nginx/html/
