--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: failover
         run: |
-          ssh ubuntu@${{IPADDR}}
+          ssh ubuntu@${{ secrets.IPADDR }}
           whoami
           git clone https://github.com/omkarsingad/GA-2048.git
           sudo cp -r GA-2048/* /usr/share/nginx/html/
